# cpp-oop-course

./: README.md  backend_example.cpp
1_Into_to_OOP/Objects_AND_Classes/: CartData.cpp  Clock.cpp  Table.cpp  Vector3D.cpp  cat.cpp  lesson.cpp
1_Into_to_OOP/Public_AND_Private/: Goods.cpp  Notes.cpp  Person.cpp  TravelBlog.cpp  lesson.cpp
1_Into_to_OOP/What_Is_OOP/: lesson.cpp
2_Constr_Destr_Methods/2_1_Constructors/: Line.cpp  PolyLine.cpp  TriangleChecker.cpp  Wallet.cpp  lesson.cpp  lesson_constructor_overload.cpp
2_Constr_Destr_Methods/2_2_Constructor_transf_destructor/: IntOperator.cpp  Point.cpp  Vector3D.cpp  VectorN.cpp  lesson.cpp  lesson_destructor.cpp
2_Constr_Destr_Methods/2_3_Copy_Constructors/: Complex.cpp  Person_delegate.cpp  StringBuffer.cpp  Thing.cpp  Vector3D.cpp  lesson_copy.cpp  lesson_delegate.cpp
2_Constr_Destr_Methods/2_4_Objects_Lifetime/: Box.cpp  CPU_Memory.cpp  Graph.cpp  Item.cpp  Notebook.cpp  lesson.cpp
2_Constr_Destr_Methods/2_5_Default_Delete/: Figure.cpp  Flower.cpp  Operator.cpp  Operator_2.cpp  lesson.cpp  lesson_delete.cpp
2_Constr_Destr_Methods/2_6_Methods_Outside_Class/: CMakeLists.txt  Clock.cpp  Complex.cpp  Thing.cpp  Wallet.cpp  lesson_PointND.cpp  lesson_PointND_old.cpp  pointnd_def.h  pointnd_implementation.cpp  pointnd_main.cpp
2_Constr_Destr_Methods/2_7_Static_Methods/: Array.cpp  Operator.cpp  Point.cpp  Window.cpp  lesson.cpp
2_Constr_Destr_Methods/2_8_Singleton/: DataThree.cpp  DeskTop.cpp  Student.cpp  lesson.cpp
2_Constr_Destr_Methods/2_9_Constant_Methods_Mutable/: BoxDims.cpp  CellItem.cpp  test.cpp  (+3 more)
(+156 files in other folders)
